--- a/Pattern_Printing.ipynb
+++ b/Pattern_Printing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQv+2+70I+ru5t5iA6ZXhB",
+      "authorship_tag": "ABX9TyOaDsIeK0VFmzWezoW/KryP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ar_GvHT6UzvE",
-        "outputId": "7e539b1c-80fb-42f7-b70e-9aa1c953f71f"
+        "outputId": "8da921a1-6789-4ee2-c389-fb89dff9dedf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "*****\n",
-            "*****\n",
-            "*****\n",
-            "*****\n",
-            "*****\n"
+            "* * * * * \n",
+            "* * * * * \n",
+            "* * * * * \n",
+            "* * * * * \n",
+            "* * * * * \n"
           ]
         }
       ],
@@ -54,9 +54,157 @@
         "row = 5\n",
         "for i in range(0,row):\n",
         "  for j in range(0,row):\n",
-        "    print('*', end = \"\")\n",
+        "    print('*', end = \" \")\n",
         "  print()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 2\n",
+        "row = 5\n",
+        "for i in range(0,row):\n",
+        "  for j in range(0,i+1):\n",
+        "    print(\"*\", end = \" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "huTFCOVHRb6Y",
+        "outputId": "38b5b8c5-7fbd-4559-eeb4-057c4633f12f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 3\n",
+        "row = 5 \n",
+        "for i in range(0,row):\n",
+        "  for j in range(0,row -i):\n",
+        "    print(\"*\", end = \" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AQQZ6kGHR0uo",
+        "outputId": "b06242d8-c17f-4299-978f-bd8c21851a4d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* * * * * \n",
+            "* * * * \n",
+            "* * * \n",
+            "* * \n",
+            "* \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 4\n",
+        "row = 5\n",
+        "for i in range(1,row+ 1):\n",
+        "  for j in range(1,row+ 1):\n",
+        "    if j <= i:\n",
+        "      print(j, end= ' ')\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4RheAUcszBut",
+        "outputId": "fde46e2b-756d-4c1d-d1a0-44d4d8b0a0f8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 \n",
+            "1 2 \n",
+            "1 2 3 \n",
+            "1 2 3 4 \n",
+            "1 2 3 4 5 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Patter 5\n",
+        "row = 5\n",
+        "n = row * 2\n",
+        "for i in range(0,n):\n",
+        "  if i <= row:\n",
+        "    for j in range(0,i):\n",
+        "      print(\"*\",end = \" \")\n",
+        "  else:\n",
+        "    for j in range(0,n - i):\n",
+        "      print(\"*\",end = \" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "638gYkrwzkBF",
+        "outputId": "e2fc0d42-4085-47c1-fa12-252c6d9ad1b4"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n",
+            "* * * * \n",
+            "* * * \n",
+            "* * \n",
+            "* \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2AXXRnid06rX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
