--- a/Pattern_Printing.ipynb
+++ b/Pattern_Printing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaDsIeK0VFmzWezoW/KryP",
+      "authorship_tag": "ABX9TyMp5jUQM/aKd7y+mpygr6M2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
         "id": "4RheAUcszBut",
         "outputId": "fde46e2b-756d-4c1d-d1a0-44d4d8b0a0f8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Patter 5\n",
+        "# Pattern 5\n",
         "row = 5\n",
         "n = row * 2\n",
         "for i in range(0,n):\n",
@@ -177,7 +177,7 @@
         "id": "638gYkrwzkBF",
         "outputId": "e2fc0d42-4085-47c1-fa12-252c6d9ad1b4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,12 +199,73 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Pattern 6\n",
+        "row = 5\n",
+        "\n",
+        "for i in range(1,row+1):\n",
+        "  No_spaces = row - i\n",
+        "  print(\" \"*No_spaces,end=\"\")\n",
+        "  for j in range(0,i):\n",
+        "    print(\"*\",end = \"\")\n",
+        "  print()"
+      ],
       "metadata": {
-        "id": "2AXXRnid06rX"
+        "id": "2AXXRnid06rX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "124d0939-d75b-4001-be80-487e5324ed5e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    *\n",
+            "   **\n",
+            "  ***\n",
+            " ****\n",
+            "*****\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 7\n",
+        "row = 5\n",
+        "\n",
+        "for i in range(0,row):\n",
+        "  No_spaces = i\n",
+        "  print(\" \"*No_spaces,end=\"\")\n",
+        "  for j in range(0,row-i):\n",
+        "    print(\"*\",end=\"\")\n",
+        "  print()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5qhimMdnQtrO",
+        "outputId": "558aa31b-cfa6-48d8-ad00-74c09aaefdbf"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*****\n",
+            " ****\n",
+            "  ***\n",
+            "   **\n",
+            "    *\n"
+          ]
+        }
+      ]
     }
   ]
 }
