--- a/Pattern_Printing.ipynb
+++ b/Pattern_Printing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMp5jUQM/aKd7y+mpygr6M2",
+      "authorship_tag": "ABX9TyMxnZecxt93k2+UYApTRHeO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,7 +217,7 @@
         },
         "outputId": "124d0939-d75b-4001-be80-487e5324ed5e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5qhimMdnQtrO",
-        "outputId": "558aa31b-cfa6-48d8-ad00-74c09aaefdbf"
+        "outputId": "77db966d-4905-45cd-f4f1-1d2dd738b6ae"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,6 +263,76 @@
             "  ***\n",
             "   **\n",
             "    *\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 8\n",
+        "row = 5\n",
+        "for i in range(0,row):\n",
+        "  No_spaces = row - i\n",
+        "  print(\" \"*No_spaces,end=\"\")\n",
+        "  for j in range(1,2*(i+1)):\n",
+        "    print(\"*\",end=\"\")\n",
+        "  print()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DNC461flIKOv",
+        "outputId": "fb7bcccd-d54c-4c27-a3af-8145d728ce2e"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     *\n",
+            "    ***\n",
+            "   *****\n",
+            "  *******\n",
+            " *********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 9\n",
+        "row = 5\n",
+        "n = 2*row - 1\n",
+        "for i in range(0,row):\n",
+        "  No_spaces = i\n",
+        "  print(\" \"*No_spaces, end = \"\")\n",
+        "  print(\" \", end= \"\")\n",
+        "  for j in range(0,n-2*i):\n",
+        "    print(\"*\", end=\"\")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S24GHsFlK74b",
+        "outputId": "b9a95f01-3077-4114-d2dd-ce5363e3fb6d"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " *********\n",
+            "  *******\n",
+            "   *****\n",
+            "    ***\n",
+            "     *\n"
           ]
         }
       ]
