--- a/Pattern_Printing.ipynb
+++ b/Pattern_Printing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxnZecxt93k2+UYApTRHeO",
+      "authorship_tag": "ABX9TyOaApMQTAZKA3mv1TnuzUq9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,7 +252,7 @@
         "id": "5qhimMdnQtrO",
         "outputId": "77db966d-4905-45cd-f4f1-1d2dd738b6ae"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         "id": "DNC461flIKOv",
         "outputId": "fb7bcccd-d54c-4c27-a3af-8145d728ce2e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
         "id": "S24GHsFlK74b",
         "outputId": "b9a95f01-3077-4114-d2dd-ce5363e3fb6d"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,6 +336,83 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 10\n",
+        "row = 5\n",
+        "for i in range(1,row+1):\n",
+        "  No_spaces = row - i\n",
+        "  print(\" \"*No_spaces,end = \"\")\n",
+        "  for j in range(0,i):\n",
+        "    print(\"* \",end = \"\")\n",
+        "  print()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LCRuaIe3R25d",
+        "outputId": "39619d21-fc0c-4fe1-9a61-7de73933ed46"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    * \n",
+            "   * * \n",
+            "  * * * \n",
+            " * * * * \n",
+            "* * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 11\n",
+        "row = 5\n",
+        "for i in range(0,row):\n",
+        "  No_spaces = i\n",
+        "  print(\" \"*No_spaces,end = \"\")\n",
+        "  for j in range(row-i,0,-1):\n",
+        "    print(\"* \",end=\"\")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f1_eOG_ES2Bg",
+        "outputId": "26449f90-878f-4191-b8ac-beaeca4d9c2a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* * * * * \n",
+            " * * * * \n",
+            "  * * * \n",
+            "   * * \n",
+            "    * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RiLE8Zj2WVYp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
