--- a/Pattern_Printing.ipynb
+++ b/Pattern_Printing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaApMQTAZKA3mv1TnuzUq9",
+      "authorship_tag": "ABX9TyMJUrmX6k7WDB7ddd2UuaUS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -356,7 +356,7 @@
         "id": "LCRuaIe3R25d",
         "outputId": "39619d21-fc0c-4fe1-9a61-7de73933ed46"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
         "id": "f1_eOG_ES2Bg",
         "outputId": "26449f90-878f-4191-b8ac-beaeca4d9c2a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,12 +407,83 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Pattern 12\n",
+        "row = 5\n",
+        "n = row * 2  # the total number of rows\n",
+        "for i in range(n):\n",
+        "  if i < row:\n",
+        "    No_spaces = row - abs(row - i -1)\n",
+        "    print(\" \" * No_spaces, end=\"\")\n",
+        "    print(\"* \" * (row - i))\n",
+        "  else:\n",
+        "    No_spaces = row - abs(row - i)\n",
+        "    print(\" \" * No_spaces, end=\"\")\n",
+        "    print(\"* \" * (i - row + 1))\n"
+      ],
       "metadata": {
-        "id": "RiLE8Zj2WVYp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GwHNWYFNfdYI",
+        "outputId": "e502fa66-d6b2-40a1-bacf-0afea6678cf0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " * * * * * \n",
+            "  * * * * \n",
+            "   * * * \n",
+            "    * * \n",
+            "     * \n",
+            "     * \n",
+            "    * * \n",
+            "   * * * \n",
+            "  * * * * \n",
+            " * * * * * \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 13\n",
+        "row = 5\n",
+        "for i in range(0,row):\n",
+        "  No_spaces = row-i\n",
+        "  print(\" \"*No_spaces,end=\"\")\n",
+        "  for j in range(0,2*i+1):\n",
+        "    if i == row-1 or j==0  or j == 2*i:\n",
+        "      print(\"*\", end =\"\")\n",
+        "    else:\n",
+        "      print(\" \",end=\"\")\n",
+        "  print()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SUaao1_C3lJ_",
+        "outputId": "c5cae35b-f864-4a47-c3cd-669925d40b5c"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     *\n",
+            "    * *\n",
+            "   *   *\n",
+            "  *     *\n",
+            " *********\n"
+          ]
+        }
+      ]
     }
   ]
 }
