--- a/Pattern_Printing.ipynb
+++ b/Pattern_Printing.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJUrmX6k7WDB7ddd2UuaUS",
+      "authorship_tag": "ABX9TyNH0Rn0kQhRwA53rFwfMYBA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -428,7 +428,7 @@
         "id": "GwHNWYFNfdYI",
         "outputId": "e502fa66-d6b2-40a1-bacf-0afea6678cf0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
         "  No_spaces = row-i\n",
         "  print(\" \"*No_spaces,end=\"\")\n",
         "  for j in range(0,2*i+1):\n",
-        "    if i == row-1 or j==0  or j == 2*i:\n",
+        "    if i == row-1 or j==0 or j == 2*i:\n",
         "      print(\"*\", end =\"\")\n",
         "    else:\n",
         "      print(\" \",end=\"\")\n",
@@ -468,9 +468,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SUaao1_C3lJ_",
-        "outputId": "c5cae35b-f864-4a47-c3cd-669925d40b5c"
+        "outputId": "600fb2b2-5613-4f0d-ad2c-d0798f643d63"
       },
-      "execution_count": 28,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,6 +481,94 @@
             "   *   *\n",
             "  *     *\n",
             " *********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 14\n",
+        "row = 5\n",
+        "for i in range(0,row):\n",
+        "  No_spaces = i\n",
+        "  print(\" \"*No_spaces,end=\"\")\n",
+        "  for j in range(2*row-1-i,0,-1):\n",
+        "    if i==0 or j==2*row-1-i or j==i+1:\n",
+        "      print(\"*\", end=\"\")\n",
+        "    else:\n",
+        "      print(\" \",end=\"\")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "co_pIs73eugY",
+        "outputId": "294f8c06-f116-435a-a3df-79b3e3dced4d"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*********\n",
+            " *     * \n",
+            "  *   *  \n",
+            "   * *   \n",
+            "    *    \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pattern 15\n",
+        "row = 5\n",
+        "n = 2*row-1\n",
+        "for i in range(0,n):\n",
+        "  if i<=row-1:\n",
+        "    No_spaces = row-1-i\n",
+        "    print(\" \"*No_spaces,end=\"\")\n",
+        "    for j in range(0,row+i):\n",
+        "      if j==0 or j==2*i:\n",
+        "        print(\"*\",end=\"\")\n",
+        "      else:\n",
+        "        print(\" \",end=\"\")\n",
+        "  else:\n",
+        "    No_spaces = i-row+1\n",
+        "    print(\" \"*No_spaces,end=\"\")\n",
+        "    for j in range(0,(n-i)*2):\n",
+        "      if j==0 or j==(n-i-1)*2:\n",
+        "        print(\"*\",end=\"\")\n",
+        "      else:\n",
+        "        print(\" \",end=\"\")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Re1llKrwiJek",
+        "outputId": "e2a3448e-e646-44ec-a782-4b9cc2b4a760"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    *    \n",
+            "   * *   \n",
+            "  *   *  \n",
+            " *     * \n",
+            "*       *\n",
+            " *     * \n",
+            "  *   * \n",
+            "   * * \n",
+            "    * \n"
           ]
         }
       ]
